# OTF-CPT

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  completion-wrappers.cpp  containers.h  critical-core.cpp  criticalPath.h  debug.cpp  debug.h  errorhandler.h  fort-wrappers.c  gen-nb-wrappers.w  gen-wrappers.w  grp-wrappers.cpp  handle-data.h  kmpc-intercept.c  kmpc-intercept.h  man-wrappers.cpp  mpi-critical.cpp  mpi-critical.h  ompt-critical.cpp  parse_flags.cpp  parse_flags.h  parse_flags.inc  timing.h  tracking.cpp  tracking.h  typedefs.h
.github/workflows/: ci.yml
cmakemodules/: FindFileCheck.cmake  FindLIT.cmake  TestHelperMacros.cmake  TestMpiFeatures.cmake  mpi_implementation_version.c
script/: CPT-plot.py
script/data/: data-1024x12.txt  data-128x12.txt  data-256x12.txt  data-512x12.txt  data-64x12.txt
tests/: CMakeLists.txt  expected-metrics.c  expected-metrics.h  lit.cfg  lit.site.cfg.in  test-group.cpp  test-omp.c  test-wc-source.cpp
tests/datastructures/: CMakeLists.txt  test-wc-tag.cpp  test.cpp
tests/fortran/: CMakeLists.txt  lit.local.cfg  m_time.f90  mpi-balanced.f90  mpi-imbalance.f90
tests/hybrid/: CMakeLists.txt  mpi-omp-hello.c  omp-mpi-hello.c
tests/mpi-only/: CMakeLists.txt  mpi-balanced.c  mpi-bcast-balanced.c  mpi-bcast-serialization.c  mpi-hello.c  mpi-imbalance.c  mpi-message.c  mpi-serialization.c
tests/omp-only/: CMakeLists.txt  omp-balanced.c  omp-earlystart.c  omp-group.c  omp-imbalance.c  omp-latestart.c  omp-serialization.c
tests/plot/: hybrid.sh  hybrid_weak.sh  mpionly.sh
