add_executable(test test.cpp)
target_link_libraries(test PUBLIC ${MPI_C_LIBRARIES})
add_executable(test-wc-source test-wc-source.cpp)
target_link_libraries(test-wc-source PUBLIC ${MPI_C_LIBRARIES})
add_executable(test-wc-tag test-wc-tag.cpp)
target_link_libraries(test-wc-tag PUBLIC ${MPI_C_LIBRARIES})
add_executable(test-group test-group.cpp)
target_link_libraries(test-group PUBLIC ${MPI_C_LIBRARIES})

#find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(test PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(test-wc-source PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(test-wc-tag PUBLIC OpenMP::OpenMP_CXX)
endif()
