add_definitions(-DOMPI_SKIP_MPICXX)

add_executable(test test.cpp)
target_link_libraries(test PUBLIC MPI::MPI_CXX)
add_executable(test-wc-source test-wc-source.cpp)
target_link_libraries(test-wc-source PUBLIC MPI::MPI_CXX)
add_executable(test-wc-tag test-wc-tag.cpp)
target_link_libraries(test-wc-tag PUBLIC MPI::MPI_CXX)
add_executable(test-group test-group.cpp)
target_link_libraries(test-group PUBLIC MPI::MPI_CXX)

#find_package(OpenMP)
if(OpenMP_CXX_FOUND)
    target_link_libraries(test PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(test-wc-source PUBLIC OpenMP::OpenMP_CXX)
    target_link_libraries(test-wc-tag PUBLIC OpenMP::OpenMP_CXX)
endif()
